fixes line overlapping issue

--- a/src/screens/chart-notes/update-medical-intervention/UpdateMedicalInterventionScreen.scss
+++ b/src/screens/chart-notes/update-medical-intervention/UpdateMedicalInterventionScreen.scss
@@ -3,6 +3,7 @@
 .add-medical-intervention-screen {
   .readonly-wrapper {
     margin-bottom: 15px;
+    word-wrap: break-word;
 
     .readonly-text {
       margin-bottom: 10px;
